Source/WebKit2/UIProcess/ios/RemoteLayerTreeHostIOS.mm
@@ -140,14 +140,10 @@ using namespace WebCore;
 
 @implementation WKRemoteView
 
-- (instancetype)initWithFrame:(CGRect)frame contextID:(uint32_t)contextID hostingDeviceScaleFactor:(float)scaleFactor
+- (instancetype)initWithFrame:(CGRect)frame contextID:(uint32_t)contextID
 {
-    if ((self = [super initWithFrame:frame])) {
+    if ((self = [super initWithFrame:frame]))
         [[self layer] setContextId:contextID];
-        // Invert the scale transform added in the WebProcess to fix <rdar://problem/18316542>.
-        float inverseScale = 1 / scaleFactor;
-        [[self layer] setTransform:CATransform3DMakeScale(inverseScale, inverseScale, 1)];
-    }
     
     return self;
 }
@@ -211,9 +207,14 @@ LayerOrView *RemoteLayerTreeHost::createLayer(const RemoteLayerTreeTransaction::
     case PlatformCALayer::LayerTypeCustom:
     case PlatformCALayer::LayerTypeAVPlayerLayer:
     case PlatformCALayer::LayerTypeWebGLLayer:
-        if (!m_isDebugLayerTreeHost)
-            view = adoptNS([[WKRemoteView alloc] initWithFrame:CGRectZero contextID:properties.hostingContextID hostingDeviceScaleFactor:properties.hostingDeviceScaleFactor]);
-        else
+        if (!m_isDebugLayerTreeHost) {
+            view = adoptNS([[WKRemoteView alloc] initWithFrame:CGRectZero contextID:properties.hostingContextID]);
+            if (properties.type == PlatformCALayer::LayerTypeAVPlayerLayer) {
+                // Invert the scale transform added in the WebProcess to fix <rdar://problem/18316542>.
+                float inverseScale = 1 / properties.hostingDeviceScaleFactor;
+                [[view layer] setTransform:CATransform3DMakeScale(inverseScale, inverseScale, 1)];
+            }
+        } else
             view = adoptNS([[WKCompositingView alloc] init]);
         break;
     case PlatformCALayer::LayerTypeShapeLayer:
